--- a/gen-ai-project/frontend/gen-ai/Bocor/index.html
+++ b/gen-ai-project/frontend/gen-ai/Bocor/index.html
@@ -70,7 +70,7 @@
       <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
         <h1>Your new digital experience with व्यापार सहायक</h1>
         <p class="typer"><span class="typed" data-typed-items="your personal translator, आपका अपना अनुवादक,तुमचा स्वतःचा अनुवादक, તમારા પોતાના અનુવાદક, আপনার ব্যক্তিগত অনুবাদক, നിങ്ങളുടെ സ്വന്തം വിവർത്തകൻ "></span></p>
-        <a href="https://dev-umfw7x6683jug0me.us.auth0.com/u/login?state=hKFo2SBOdkpXR3U1dmJiYmxVRkM5Sm05akt6c0swVDVMVHE5d6Fur3VuaXZlcnNhbC1sb2dpbqN0aWTZIGNGNG9UX2xBcmRCNlVXbFlaWDFJN24xRUtWLXU1OUd0o2NpZNkgcmtqbHo2cUxaa1ZHbkNpOGZzR3VNRDd3bUVaTFhHZXY" class="btn-get-started scrollto">Get Started</a>
+        <a href="http://localhost:5173/premain" class="btn-get-started scrollto">Get Started</a>
       </div>
       <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
         <img src="assets/img/hero.png" class="img-fluid" alt="">
