--- a/gen-ai-project/frontend/gen-ai/Bocor/index.html
+++ b/gen-ai-project/frontend/gen-ai/Bocor/index.html
@@ -54,7 +54,7 @@
           <li><a class="nav-link scrollto" href="#about">About Us</a></li>
           <li><a class="nav-link scrollto" href="#features">Features</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQs</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="http://localhost:5173/premain">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -66,7 +66,7 @@
   <section id="hero">
 
     <div class="container">
-      <div class="row d-flex align-items-center"">
+      <div class="row d-flex align-items-center">
       <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
         <h1>Your new digital experience with व्यापार सहायक</h1>
         <p class="typer"><span class="typed" data-typed-items="your personal translator, आपका अपना अनुवादक,तुमचा स्वतःचा अनुवादक, તમારા પોતાના અનુવાદક, আপনার ব্যক্তিগত অনুবাদক, നിങ്ങളുടെ സ്വന്തം വിവർത്തകൻ "></span></p>
